--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     background-color: #000000; /* Set background color to black */
     color: white; /* Optional: Set text color to white for visibility */
     text-align: center; /* Center align text and image */
-    font-family: 'Anja Eliane', sans-serif; /* Set default font to Anja Eliane */
+    font-family: 'Kanit', sans-serif; /* Set default font to Kanit */
 }
 
 .centered-image {
@@ -57,11 +57,13 @@ body {
     margin-left: -100px; /* Adjust to center */
     opacity: 0; /* Start invisible */
     transition: opacity 0.3s, visibility 0.3s; /* Fade in/out effect */
+    font-size: 22px; /* Set font size for tooltip text */
 }
 
 .tooltip:hover .tooltiptext {
     visibility: visible; /* Show tooltip on hover */
     opacity: 1; /* Fade in */
+    font-size: 22px; /* Set smaller font size on hover */
 }
 
 .fade-out {
@@ -70,17 +72,17 @@ body {
 }
 
 .studio {
-    font-size: 24px; /* Set font size for studio text */
+    font-size: 30px; /* Set font size for studio text */
     font-weight: bold; /* Make the text bold */
 }
 
 .partner {
-    font-size: 24px; /* Set font size for partner text */
+    font-size: 30px; /* Set font size for partner text */
     font-weight: bold; /* Make the text bold */
 }
 
 .collective {
-    font-size: 24px; /* Set font size for collective text */
+    font-size: 30px; /* Set font size for collective text */
     font-weight: bold; /* Make the text bold */
 }
 
